Code style fixes